# pydantic-settings-file-envar

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-bake.hcl  pyproject.toml  test_pydantic_settings_file_envar.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  validate.yml
docs/: dev.md
example/: file_envar_example.py  pyproject.toml
pydantic_settings_file_envar/: __init__.py
